--- a/src/librender/Makefile
+++ b/src/librender/Makefile
@@ -1,4 +1,34 @@
-define METHODS
-	create
+define GETTERS
+	state:int
+	osx:int
+	osy:int
+	blocksize:int
+	ctx:void*
+	win:void*
+	map:void*
+	database:void*
 endef
+
+define SETTERS
+	set_state:int
+	set_osx:int
+	set_osy:int
+	set_blocksize:int
+	bind_ctx:void*
+	bind_win:void*
+	bind_map:void*
+	bind_database:void*
+endef
+
+define METHODS
+	create_null
+	create
+	load_image
+	resolve_point
+	put_image
+	init_database
+	destroy_database
+	destroy
+endef
+
 include ../Makefile
